I added some css delted some

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <body>
         <div class="header">
             <div class="title">
-                <h1 style="margin: 0 auto 20px auto; font-size: 100px;">ARTICLES</h1>
-                <h3 style="margin-bottom: 0;">Made By <span style="color: #F9F54B;">Jebraoui</span></h3>
+                <h1 style="margin: 0 auto; font-size: 100px;">ARTICLES</h1>
+                <h3 style="text-align: center; margin: 0 auto 20px auto;">Made By <span style="color: #F9F54B;">Jebraoui</span></h3>
             </div>
         </div>
         <div id="container">
