I edited some html and css

--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <body>
         <div class="header">
             <div class="title">
-                <h1 style="margin: 0 auto; font-size: 100px;">ARTICLES</h1>
-                <h3 style="text-align: center; margin: 0 auto 20px auto;">Made By <span style="color: #F9F54B;">Jebraoui</span></h3>
+                <h1 style="margin: 0 auto; font-size: 100px; letter-spacing: 0.3em;">ARTICLES</h1>
+                <h3 style="text-align: center; margin: 0 auto 20px auto;">Written By <span style="color: #F9F54B;" title="Owner">Jebraoui</span></h3>
             </div>
         </div>
         <div id="container">
-            <div class="boxe1" style="margin-right: 41px;">
+            <div class="boxe1" style="margin-right: 41px;" title="Particule Physics">
                 
             </div>
             <div class="boxe1" style="margin-right: 41px;">
